# deep-learning-cnn-paper-2025

./: README.md  label_permutation_test.py  overfitting-debug.py  pyproject.toml
src/chart_generator/: __init__.py  cli.py  fetcher.py  generator.py  renderer.py
src/cnn_classifier/: __init__.py  cli.py  dataset.py  evaluate.py  model.py  train.py
